# Financial_models

./: .gitignore  app.py  pyproject.toml  requirements.txt  tree.txt
apps/api/: __init__.py  main.py  schemas.py
apps/api/routers/: __init__.py  data.py  expert.py  simulation.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: AlertsList.tsx  CashFlowChart.tsx  CumulativeCashFlowChart.tsx  ExitScenario.tsx  ExpertSimulatorForm.tsx  FiscalComparison.tsx  LMPStatus.tsx  MetricCard.tsx  ResultsDashboard.tsx  ScoreGauge.tsx  SensitivityChart.tsx  SimulatorForm.tsx
immo_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: carte_3d_immobilier.html  exemples_de_cas_pour_llm.csv  geojson_layer.html  notebook.ipynb  testing with building shape.html  testing3D_layer.html  testing3D_layer2.html  testing_layer.html
notebooks/data/: LISEZ_MOI.txt
real_estate/: pyvenv.cfg
scripts/: _0_financial_model.py  _10_dvf_analyzer.py  _10_dvf_analyzer_local.py  _10_dvf_analyzer_refactored.py  _10_get_and_analyze_dvf.py  _11_taxes.py  _12_excel_exporter.py  _13_excel_exporter_full.py  _14_translations.py  _15_city_defaults.py  _16_simple_viewer.py  _17_dvf_comparison.py  _19_address_widget.py  _1_model_params.py  _2_profit_and_loss.py  _3_balance_sheet.py  _4_cash_flow.py  _5_transaction_calculator.py  _6_viewer.py  _7_data_visualizer.py  _8_loan_calculator.py  _9_investment_metrics.py
tests/: test_balance_sheet.py  test_cash_flow.py  test_model_parameters.py  test_pnl.py  test_transaction_calculator.py
(+3 files in other folders)
